fixed spacing, font, color, etc. need to fix top Artr logo

--- a/artr/app/globals.css
+++ b/artr/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -30,4 +32,8 @@
   .text-balance {
     text-wrap: balance;
   }
+}
+
+.shadow-lightPurple {
+  box-shadow: 0 0 40px 5px rgba(114, 76, 249, 0.5);
 }
